--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,3 +17,5 @@ jobs:
         go-version: 1.17
     - name: Build
       run: make build
+    - name: run Unit tests
+      run: go test  ./... -v -covermode=count -coverprofile=coverage.txt
