--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,4 +18,4 @@ jobs:
     - name: Build
       run: make build
     - name: run Unit tests
-      run: go test  ./... -v -covermode=count -coverprofile=coverage.txt
+      run: make test
