--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,9 +32,9 @@ jobs:
       - name: set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: login to github repository
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ secrets.REPOSITORY_OWNER }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.actor }}
+          password: ${{ secrets.github_token }}
