--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      - name: user name and token
+        run: echo ${{ secrets.actor }} ${{ secrets.github_token }}
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
