--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,36 +7,36 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.17
-      - name: Build
-        run: make build
-      - name: run Unit tests
-        run: make test
-      - name: upload Coverage report to CodeCov
-        uses: codecov/codecov-action@v1.0.0
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.txt
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Set up Go
+#        uses: actions/setup-go@v2
+#        with:
+#          go-version: 1.17
+#      - name: Build
+#        run: make build
+#      - name: run Unit tests
+#        run: make test
+#      - name: upload Coverage report to CodeCov
+#        uses: codecov/codecov-action@v1.0.0
+#        with:
+#          token: ${{ secrets.CODECOV_TOKEN }}
+#          file: ./coverage.txt
   push_to_docker_latest:
     name: push master code to docker latest image
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
-      - name: set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+#      - name: set up Docker Buildx
+#        uses: docker/setup-buildx-action@v1
       - name: user name and token
-        run: echo ${{ secrets.actor }} ${{ secrets.github_token }}
+        run: echo ${{ github.actor }} ${{ secrets.github_token }}
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ secrets.actor }}
-          password: ${{ secrets.github_token }}
+#      - name: Login to GitHub Container Registry
+#        uses: docker/login-action@v1
+#        with:
+#          registry: ghcr.io
+#          username: ${{ secrets.actor }}
+#          password: ${{ secrets.github_token }}
