--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,14 +29,14 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
-#      - name: set up Docker Buildx
-#        uses: docker/setup-buildx-action@v1
+      - name: set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: user name and token
         run: echo ${{ github.actor }} ${{ secrets.github_token }}
 
-#      - name: Login to GitHub Container Registry
-#        uses: docker/login-action@v1
-#        with:
-#          registry: ghcr.io
-#          username: ${{ secrets.actor }}
-#          password: ${{ secrets.github_token }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.github_token }}
