--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,15 +15,15 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.17
-#      - name: Build
-#        run: make build
-#      - name: run Unit tests
-#        run: make test
-#      - name: upload Coverage report to CodeCov
-#        uses: codecov/codecov-action@v1.0.0
-#        with:
-#          token: ${{ secrets.CODECOV_TOKEN }}
-#          file: ./coverage.txt
+      - name: Build
+        run: make build
+      - name: run Unit tests
+        run: make test
+      - name: upload Coverage report to CodeCov
+        uses: codecov/codecov-action@v1.0.0
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage.txt
   push_to_docker_latest:
     name: push master code to docker latest image
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
