add command to check version

--- a/.github/workflows/ci-env.yml
+++ b/.github/workflows/ci-env.yml
@@ -11,4 +11,10 @@ jobs:
       - name: check
         run: |
           echo "hello"
+          go version
+          docker version
+          helm version
+          kustomize version
+          kubectl version
+          
 
